--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,20 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.2.9",
-    "@angular/cdk": "^17.3.10",
+    "@angular/cdk": "^19.2.14",
     "@angular/common": "^19.2.9",
     "@angular/compiler": "^19.2.9",
     "@angular/core": "^19.2.9",
     "@angular/forms": "^19.2.9",
-    "@angular/material": "^17.3.10",
+    "@angular/material": "^19.2.14",
     "@angular/platform-browser": "^19.2.9",
     "@angular/platform-browser-dynamic": "^19.2.9",
     "@angular/platform-server": "^19.2.9",
     "@angular/router": "^19.2.9",
     "@angular/ssr": "^19.2.10",
+    "@primeng/themes": "^19.1.2",
     "angular-oauth2-oidc": "^17.0.2",
     "express": "^4.18.2",
+    "primeng": "^19.1.2",
     "rxjs": "~7.8.0",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
